Overflow problem solved

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
   /* background-image: linear-gradient(315deg, #05e8ba 0%, #087ee1 74%); */
   /* background-color: #9dc5c3;
   background-image: linear-gradient(315deg, #9dc5c3 0%, #5e5c5c 74%); */
@@ -26,7 +27,7 @@ body {
 }
 
 .sunnygrade {
-  width: 203.5vh;
+  width: 208vh;
   height: 105vh;
   display: flex;
   align-items: center;
@@ -34,7 +35,7 @@ body {
   background-image: linear-gradient(315deg, #05e8ba 0%, #087ee1 74%);
 }
 .cloudygrade {
-  width: 203.5vh;
+  width: 208vh;
   height: 105vh;
   display: flex;
   align-items: center;
@@ -44,7 +45,7 @@ body {
 }
 
 .foggygrade {
-  width: 203.5vh;
+  width: 208vh;
   height: 105vh;
   display: flex;
   align-items: center;
@@ -189,7 +190,7 @@ h6 {
   color: #002652;
   width: 60.4dvw;
   height: 30vh;
-  margin-top: 15vb;
+  margin-top: 10vb;
   margin-left: 10dvh;
   /* margin-right: 15vb; */
   border-radius: 25px;
